--- a/index.html
+++ b/index.html
@@ -1,12 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="name.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Topshiriq</title>
 </head>
 <body>
-    <div class="box">Xush Kelibsiz!!</div>
+	<h2>Marofov Ozodbek</h2>	
+<table border="1" cellpadding="10" bgcolor="#ccc">
+	<tr>
+		
+			<label for="text"><th>Enter your first<br>name</th></label>
+			<td><input type="" placeholder="Enter your first name"></td>
+		
+	</tr>
+	<tr>
+		
+			<label for="text"><th>Enter your last<br>name</th></label>
+			<td><input type="text"></td>
+	
+	</tr>
+
+		<tr>
+			<label for="pass"><th>Enter your<br>password</th></label>
+			<td><input type="password" id="pass"></td>
+	</tr>
+
+	<tr>
+		<label><th> Enter your<br>password </th></label>
+		<td><input type="password" id="pass"></td>
+	</tr>
+
+	<tr>
+		<label><th>Enter your email</th></label>
+		<td><input type="email" id="email"></td>
+	</tr>
+
+<tr>
+		<label><th>Enter your mobile</th></label>
+		<td><input type="number" id="num"></td>
+	</tr>
+
+	<tr>
+		<label><th>Enter your address</th></label>
+		<td><textarea rows="7" cols="20"></textarea></td>
+	</tr>
+
+
+
+
+
+<tr>
+  <th> <label>Select your gender</label> </th>
+  <td><label for="male">male</label>  
+  <input type="radio" name="jins" id="male"></input> 
+  <label for="female">female</label>
+  <input type="radio" name="jins"id="female"></td>
+  </tr>
+<tr><th> <label>Select your hobbies</label> </th> 
+    <td><label for="hobby1">hobby1</label> 
+    <input type="radio" name="hobby" id="hobby1">
+    <label for="hobby2">hobby2</label>
+    <input type="radio" name="hobby" id="hobby2">
+    <label for="hobby3">hobby3</label>
+    <input type="radio" name="hobby" id="hobby3"></td>
+</tr>
+
+<tr><th> <label for="date"> Select your DOB </label> </th>
+  <td><input type="date" name="jins"></td>
+</tr>
+
+<tr><th>Select your Country</th>
+  <td><select>
+    <option>Select your country</option>
+    <option>Uzb</option>
+    <option>Russ</option>
+    <option>USA</option>
+    </select></td>
+</tr>
+<tr>
+    <th><label for="file">Upload your pic</label></th>
+    <td><input type="file" id="file"> </td>               
+</tr>
+<tr> 
+  <td colspan="2" align="center"> <input type="submit" value="Save my data"> 
+  <input type="reset" value="Reset data"> </td>
+</tr>
+  </table>
+
+</table>
 </body>
 </html>
